# NHLGuessingGame

./: .gitignore  README.md  getTeams.py
src/: CMakeLists.txt  game.cpp  game.h  main.cpp  makefile  player.cpp  player.h  teamIDs.txt
